@@ -1,3 +1,7 @@
+2010-11-04  Francois Chouinard  <fchouinard@gmail.com>
+
+	* src/org/eclipse/linuxtools/lttng/ui/views/project/ProjectView.java: Create an ad hoc experiment when a trace is selected 
+
 2010-10-29  Francois Chouinard  <fchouinard@gmail.com>
 
 	* src/org/eclipse/linuxtools/lttng/ui/views/histogram/ParentHistogramCanvasPaintListener.java (paintControl): Temporary refresh fix
